--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -9,8 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.launch.LauncherFragment">
-
-
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -22,7 +20,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <Button
             android:id="@+id/button_upcoming_elections"
             android:layout_width="match_parent"
@@ -30,13 +27,12 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:text="Upcoming Elections"
+            android:text="@string/upcoming_elections"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toTopOf="@+id/button_find_representatives"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
-
         <Button
             android:id="@+id/button_find_representatives"
             android:layout_width="match_parent"
@@ -44,7 +40,7 @@
             android:layout_marginBottom="40dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:text="Find My Representatives"
+            android:text="@string/find_my_representatives"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
