--- a/app/src/main/res/layout/fragment_find_my_representative.xml
+++ b/app/src/main/res/layout/fragment_find_my_representative.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
         android:id="@+id/coordinator_layout"
-        android:layout_height="match_parent"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:fitsSystemWindows="true"
-            android:layout_height="350dp">
+            android:layout_height="350dp"
+            android:fitsSystemWindows="true">
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_tool_bar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:expandedTitleTextAppearance="@android:color/transparent"
                 android:paddingBottom="2dp"
                 app:contentScrim="@color/white"
+                app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,8 +37,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:inputType="textPersonName"
                         android:hint="@string/address1"
+                        android:inputType="textPersonName"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -49,8 +49,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:ems="10"
-                        android:inputType="textPersonName"
                         android:hint="@string/address2"
+                        android:inputType="textPersonName"
                         app:layout_constraintStart_toStartOf="@+id/et_address_line1"
                         app:layout_constraintTop_toBottomOf="@+id/et_address_line1" />
 
@@ -60,8 +60,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:ems="10"
-                        android:inputType="textPersonName"
                         android:hint="@string/city"
+                        android:inputType="textPersonName"
                         app:layout_constraintStart_toStartOf="@+id/et_address_line2"
                         app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />
 
@@ -81,8 +81,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:ems="10"
-                        android:inputType="textPersonName"
                         android:hint="@string/zip_code"
+                        android:inputType="textPersonName"
                         app:layout_constraintStart_toStartOf="@+id/et_city"
                         app:layout_constraintTop_toBottomOf="@+id/et_city" />
 
@@ -90,8 +90,8 @@
                         android:id="@+id/button_find_my_representative"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/find_my_representative"
                         android:layout_marginTop="8dp"
+                        android:text="@string/find_my_representative"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +101,8 @@
                         android:id="@+id/button_use_my_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/use_my_location"
                         android:layout_marginTop="8dp"
+                        android:text="@string/use_my_location"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
@@ -111,13 +111,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
-
 
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -128,29 +122,37 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
+
 
                 <TextView
+                    android:id="@+id/tv_find_rep_title"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="@string/address2" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_represenatives"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_representatives"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="@string/address2" />
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_find_rep_title" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="@string/address2" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 </layout>
