--- a/app/src/main/res/layout/fragment_election_data_detail.xml
+++ b/app/src/main/res/layout/fragment_election_data_detail.xml
@@ -8,6 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/offWhite"
         tools:context=".fragments.electiondatadetails.ElectionDataDetail">
 
 
@@ -41,8 +42,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:textStyle="bold"
             tools:text="TextView"
-            android:textSize="15sp"
+            android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
