--- a/app/src/main/res/layout/fragment_election_data_list.xml
+++ b/app/src/main/res/layout/fragment_election_data_list.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/offWhite"
         tools:context=".fragments.electionsdata.ElectionDataList">
 
 
@@ -22,9 +23,9 @@
 
             <TextView
                 android:id="@+id/tv_upcoming_elections"
-                android:layout_width="wrap_content"
-                android:textSize="20sp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textSize="23sp"
+                android:textStyle="bold"                android:layout_height="wrap_content"
                 android:text="@string/upcoming_elections"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -58,10 +59,11 @@
 
             <TextView
                 android:id="@+id/tv_current_elections"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/current_elections"
-                android:textSize="20sp"
+                android:textSize="23sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
