--- a/app/src/main/res/layout/fragment_find_my_representative.xml
+++ b/app/src/main/res/layout/fragment_find_my_representative.xml
@@ -8,6 +8,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
+        android:background="@color/offWhite"
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -22,14 +23,14 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:paddingBottom="2dp"
-                app:contentScrim="@color/white"
+                app:contentScrim="@color/offWhite"
                 app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white">
+                    android:background="@color/offWhite">
 
 
                     <EditText
