--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="colorPrimaryDark">#1d3747</color>
     <color name="colorAccent">#82d9c8</color>
     <color name="gray50">#7F7F7F</color>
+    <color name="eggColor">#FFFDD0</color>
+    <color name="cornSilk">#FFF8DC</color>
+    <color name="ivory">#FFFFF0</color>
+    <color name="offWhite">#FAF9F6</color>
 </resources>
