--- a/app/src/main/res/layout/representative_card.xml
+++ b/app/src/main/res/layout/representative_card.xml
@@ -66,8 +66,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textSize="22sp"
+                tools:text="White House "
+                android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_representative_name"
                 app:layout_constraintStart_toEndOf="@+id/iv_representative_picture"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -76,7 +76,8 @@
                 android:id="@+id/tv_representative_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                tools:text="Joe Biden"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_party_line"
                 app:layout_constraintStart_toStartOf="@+id/tv_court_type"
@@ -86,7 +87,7 @@
                 android:id="@+id/tv_party_line"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                tools:text="information"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_court_type"
                 app:layout_constraintTop_toBottomOf="@+id/tv_representative_name" />
