--- a/app/src/main/res/layout/representative_card.xml
+++ b/app/src/main/res/layout/representative_card.xml
@@ -23,14 +23,14 @@
 
             <ImageView
                 android:id="@+id/iv_representative_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_representative_website"
-                app:layout_constraintHorizontal_bias="0.075"
+                app:layout_constraintHorizontal_bias="0.005"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.694"
+                app:layout_constraintVertical_bias="0.666"
                 app:srcCompat="@drawable/ic_profile" />
 
             <ImageView
